--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,13 @@
     padding: 0;
     margin: 0;
 }
+.navbar{
+    /* height: 100px; */
+    background-color: white;
+}
+.fa-compass{
+    color: #fe424d;
+}
 #newListingForm{
     display: flex;
     flex-direction: column;
@@ -22,4 +29,8 @@
 
 body{
     background-color: red;
+}
+
+.nav-link{
+    color: #222222 !important;
 }
