--- a/views/listings/listings.ejs
+++ b/views/listings/listings.ejs
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All properties</title>
-  </head>
+<% layout("/layouts/boilerplate")%>
   <body>
     <h4>you will find listing here</h4>
-    <form action="/listings/new" method="get">
+    <!-- <form action="/listings/new" method="get">
       <button>Add new Listing</button>
-    </form>
+    </form> -->
     <ul>
       <%for (listing of listings){%>
       <li> <a href="/listings/<%=listing._id%>"><%=listing.title%></a></li>
       <%}%>
     </ul>
   </body>
-</html>
+
