--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,3 +34,24 @@ body{
 .nav-link{
     color: #222222 !important;
 }
+
+/* Footer */
+.f-info{
+    display: flex;
+    height: 8rem;
+    background-color: #ebebeb;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.f-info-socials{
+    font-size: 1.2rem;
+}
+.f-info-links a {
+    text-decoration: none;
+    color: #222222;
+
+    &:hover{
+        text-decoration: underline;
+    }
+}
