--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,106 +1,106 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .navbar {
-    /* height: 100px; */
-    background-color: white;
-}
+  background-color: white;
 
-.fa-compass {
+  & .fa-compass {
     color: #fe424d;
+  }
+
+  & .nav-link {
+    color: #222222 !important;
+  }
 }
 
 #newListingForm {
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    margin-inline: auto;
-    border: 1px solid white;
-    gap: 1rem;
-}
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin-inline: auto;
+  border: 1px solid white;
+  gap: 1rem;
 
-#newListingForm input,
-#newListingForm textarea,
-#newListingForm button {
-    padding: .5rem 1rem;
-}
+  & input,
+  & textarea,
+  & button {
+    padding: 0.5rem 1rem;
+  }
 
-#newListingForm textarea {
+  & textarea {
     resize: vertical;
-}
-
-.nav-link {
-    color: #222222 !important;
+  }
 }
 
 /* Footer */
 .f-info {
-    display: flex;
-    height: 8rem;
-    background-color: #ebebeb;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-}
+  display: flex;
+  height: 8rem;
+  background-color: #ebebeb;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 
-.f-info-socials {
+  & .f-info-socials {
     font-size: 1.2rem;
-}
+  }
 
-.f-info-links a {
+  & .f-info-links a {
     text-decoration: none;
     color: #222222;
 
     &:hover {
-        text-decoration: underline;
+      text-decoration: underline;
     }
+  }
 }
 
 /* Listings */
 .listings-grid {
-    display: grid;
-    justify-content: center;
-    gap: 3rem 2rem;
-    grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
-    padding: 2rem 0;
+  display: grid;
+  justify-content: center;
+  gap: 3rem 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+  padding: 2rem 0;
 
-    & a {
-        text-decoration: none;
-    }
+  & a {
+    text-decoration: none;
+  }
 }
 
 /* Card */
 .card {
-    border: none !important;
+  border: none !important;
 
-    & .image {
-        height: 20rem !important;
-        width: 100% !important;
-        border-radius: 1rem !important;
-        overflow: hidden;
-        transition: box-shadow .5s ease;
+  & .image {
+    height: 20rem !important;
+    width: 100% !important;
+    border-radius: 1rem !important;
+    overflow: hidden;
+    transition: box-shadow 0.5s ease;
+  }
 
-    }
+  & .card-img-top {
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem !important;
+    transition: transform 0.5s ease;
+    object-fit: cover;
+    transform: scale(1.3);
+  }
 
-    & .card-img-top {
-        width: 100%;
-        height: 100%;
-        border-radius: 1rem !important;
-        transition: transform .5s ease;
-        object-fit: cover;
-    }
+  & .card-body {
+    padding: 0 !important;
+    margin-top: 1rem;
+  }
 
-    & .card-body {
-        padding: 0 !important;
-        margin-top: 1rem;
-    }
+  &:hover .card-img-top {
+    transform: scale(1);
+  }
 
-    &:hover .card-img-top {
-        transform: scale(1.1);
-    }
-    &:hover .image{
-        box-shadow: 0px 1px 20px 0px #0d0000ad !important;
-    }
+  &:hover .image {
+    box-shadow: 0px 1px 20px 0px #0d0000ad !important;
+  }
 }
