--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,14 +1,56 @@
 <% layout("/layouts/boilerplate")%>
-  <body>
-    <form action="http://localhost:3000/listings<%= listing ? '/' + listing._id + '?_method=PATCH' : '' %>" method="post" id="newListingForm">
-      <input type="text" name="listing[title]" placeholder="title" value="<%=listing?listing.title:""%>"/>
-      <input type="text" name="listing[country]" placeholder="country" value="<%=listing?listing.country:""%>"/>
-      <input type="text" name="listing[location]" placeholder="location" value="<%=listing?listing.location:""%>"/>
-      <input type="number" name="listing[price]" placeholder="price" value="<%=listing?listing.price:""%>"/>
-      <textarea name="listing[description]" placeholder="price" rows="10">
+
+<body>
+  <form
+    action="http://localhost:3000/listings<%= listing ? '/' + listing._id + '?_method=PATCH' : '' %>"
+    method="post"
+    id="newListingForm"
+  >
+  <H3>Add Details of your place</H3>
+    <div class="form-group">
+      <label for="title" class="form-label">Title</label>
+      <input type="text" class="form-control" name="listing[title]"
+      placeholder="title" value="<%=listing?listing.title:""%>" />
+    </div>
+
+    <div class="row">
+      <div class="form-group col-md-4">
+        <label for="country" class="form-label">Country</label>
+        <input type="text" class="form-control" name="listing[country]"
+        placeholder="country" value="<%=listing?listing.country:""%>" />
+      </div>
+
+      <div class="form-group col-md-4">
+        <label for="location" class="form-label">Location</label>
+        <input type="text" class="form-control" name="listing[location]"
+        placeholder="location" value="<%=listing?listing.location:""%>" />
+      </div>
+
+      <div class="form-group col-md-4">
+        <label for="price" class="form-label">Price</label>
+        <input type="number" class="form-control" name="listing[price]"
+        placeholder="price" value="<%=listing?listing.price:""%>" />
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="image" class="form-label">Image</label>
+      <input type="text" class="form-control" name="listing[image][url]"
+      placeholder="paste link of your location image"
+      value="<%=listing?listing.image.url:""%>" />
+    </div>
+
+    <div class="form-group">
+      <label for="description" class="form-label">Description</label>
+      <textarea
+        name="listing[description]"
+        class="form-control"
+        placeholder="price"
+        rows="5"
+      >
         <%=listing?listing.description:""%>
       </textarea>
-      <button>Add Listing</button>
-    </form>
-  </body>
-</html>
+    </div>
+    <button class="btn btn-dark">Add Listing</button>
+  </form>
+</body>
