styling listing(show) page

--- a/views/listings/listing.ejs
+++ b/views/listings/listing.ejs
@@ -1,16 +1,32 @@
 <% layout("/layouts/boilerplate")%>
-<body>
-    <h3>Listing</h3>
-    <ul>
-        <li><%=listing.title%></li>
-        <li><%=listing.country%></li>
-        <li><%=listing.location%></li>
-        <li> &#8377; <%= listing.price.toLocaleString("en-IN") %></li>
-        <li><%=listing.description%></li>
-    </ul>
-    
-    <a href="http://localhost:3000/listings/<%=listing._id%>/edit">edit</a>
-    <form method="post" action="/listings/<%=listing._id%>?_method=DELETE" >
-        <button>delete</button>
+<div class="listing">
+  <div class="row">
+    <div class="col-8 offset-3">
+      <h3>Listing</h3>
+    </div>
+    <div class="card col-6 offset-3">
+      <img src="<%=listing.image.url%>" alt="..." class="card-img-top" />
+      <div class="card-body">
+        <h3><%=listing.title%></h3>
+        <p class="car-text"><%=listing.description%></p>
+        <div class="">
+          <span><%=listing.location%></span>,
+          <span><%=listing.country%></span>
+        </div>
+        <p>&#8377; <%= listing.price.toLocaleString("en-IN") %></p>
+      </div>
+    </div>
+  </div>
+  <div class="options">
+    <a
+      href="http://localhost:3000/listings/<%=listing._id%>/edit"
+      class="btn btn-dark col-2 offset-3"
+      >Edit</a
+    >
+    <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
+      <button class="btn  offset-5">delete</button>
     </form>
-</body>
+  </div>
+</div>
+
+
