--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,6 +54,77 @@ body {
   }
 }
 
+/* Card */
+.card {
+  border: none !important;
+
+  & .card-img-top {
+    border-radius: 1rem !important;
+  }
+
+  & .card-body {
+    padding: 0 !important;
+    margin-top: 1rem;
+  }
+}
+
+/* Listings(index) */
+.listings-grid {
+  display: grid;
+  justify-content: center;
+  gap: 3rem 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+  padding: 2rem 0;
+
+  & a {
+    text-decoration: none;
+  }
+
+  & .card {
+    & .image {
+      height: 20rem !important;
+      width: 100% !important;
+      border-radius: 1rem !important;
+      overflow: hidden;
+      transition: box-shadow 0.5s ease;
+    }
+
+    & .card-img-top {
+      width: 100%;
+      height: 100%;
+      border-radius: 1rem !important;
+      transition: transform 0.5s ease;
+      object-fit: cover;
+      transform: scale(1.3);
+    }
+
+    &:hover .card-img-top {
+      transform: scale(1);
+    }
+
+    &:hover .image {
+      box-shadow: 0px 1px 20px 0px #0d0000ad !important;
+    }
+  }
+}
+
+/* Listing(show) */
+.listing {
+  & .card-img-top {
+    height: 40vh;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  & .options{
+    display: flex;
+  }
+  & .btn-dark {
+    background-color: #fe424d !important;
+    border: none !important;
+  }
+}
+
 /* Footer */
 .f-info {
   display: flex;
@@ -74,53 +145,5 @@ body {
     &:hover {
       text-decoration: underline;
     }
-  }
-}
-
-/* Listings */
-.listings-grid {
-  display: grid;
-  justify-content: center;
-  gap: 3rem 2rem;
-  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
-  padding: 2rem 0;
-
-  & a {
-    text-decoration: none;
-  }
-}
-
-/* Card */
-.card {
-  border: none !important;
-
-  & .image {
-    height: 20rem !important;
-    width: 100% !important;
-    border-radius: 1rem !important;
-    overflow: hidden;
-    transition: box-shadow 0.5s ease;
-  }
-
-  & .card-img-top {
-    width: 100%;
-    height: 100%;
-    border-radius: 1rem !important;
-    transition: transform 0.5s ease;
-    object-fit: cover;
-    transform: scale(1.3);
-  }
-
-  & .card-body {
-    padding: 0 !important;
-    margin-top: 1rem;
-  }
-
-  &:hover .card-img-top {
-    transform: scale(1);
-  }
-
-  &:hover .image {
-    box-shadow: 0px 1px 20px 0px #0d0000ad !important;
   }
 }
