adding custom error.js page

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -35,7 +35,7 @@
 
       <div class="form-group col-md-4">
         <label for="price" class="form-label">Price</label>
-        <input required type="text" class="form-control" name="listing[price]"
+        <input required type="number" class="form-control" name="listing[price]"
         placeholder="price" value="<%=listing?listing.price:""%>" />
         <div class="invalid-feedback">Valid Price required!</div>
       </div>
