--- a/views/listings/listing.ejs
+++ b/views/listings/listing.ejs
@@ -24,9 +24,59 @@
       >Edit</a
     >
     <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
-      <button class="btn  offset-5">delete</button>
+      <button class="btn offset-5">delete</button>
     </form>
   </div>
+
+  <div class="col-8 offset-3">
+    <hr />
+    <h4>Your Review is valuable for us</h4>
+    <form
+      action="/listing/<%=listing.id%>/review"
+      method="post"
+      class="needs-validation"
+      novalidate
+    >
+      <div class="form-group">
+        <label for="rating">Rating</label>
+        <input
+          required
+          type="range"
+          min="1"
+          max="5"
+          name="review[rating]"
+          id="rating"
+          class="form-range"
+        />
+        <div class="small">Adjust this Slider for 1-5</div>
+      </div>
+      <div class="form-group">
+        <label for="comment" class="form-label">Comment</label>
+        <textarea
+          rows="5"
+          name="review[comment]"
+          id="comment"
+          class="form-control"
+          placeholder="Describe what you liked about this place"
+          required
+        ></textarea>
+        <div class="invalid-feedback">Please describe what your feelings</div>
+      </div>
+
+      <button class="btn btn-dark">Publish</button>
+    </form>
+    <hr />
+    <h4>All reviews</h4>
+    <div class="row">
+      <% for(review of listing.reviews){%>
+      <div class="card col-5 ms-2 mb-2">
+        <div class="card-body">
+          <h5 class="card-title">Name</h5>
+          <div class="card-text"><%=review.comment%></div>
+          <div class="card-text"><%=review.rating%></div>
+        </div>
+      </div>
+      <%}%>
+    </div>
+  </div>
 </div>
-
-
