adding login and signup functionality

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@ body {
   }
 }
 
-#newListingForm {
+#newListingForm, #signupForm {
   display: flex;
   flex-direction: column;
   width: 80%;
@@ -39,23 +39,7 @@ body {
   & button {
     padding: 0.5rem 1rem;
   }
-  /*
-  & .form-control:focus {
-    border-color: transparent;
-    outline: none !important;
-    box-shadow: none !important; 
-  }
 
-  & .form-control:not(:placeholder-shown):valid {
-    outline: 2px solid green !important;
-  }
-  & .form-control:not(:placeholder-shown):invalid {
-    outline: 2px solid red !important;
-  }
-  & .form-control:focus:invalid {
-    outline: 2px solid yellow !important;
-  }
-  */
   & textarea {
     resize: vertical;
   }
