--- a/views/listings/listings.ejs
+++ b/views/listings/listings.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilerplate")%><%=success%>
+<% layout("/layouts/boilerplate")%>
 <body>
   <div class="listings-grid">
     <%for (listing of listings){%>
