--- a/views/listings/listing.ejs
+++ b/views/listings/listing.ejs
@@ -8,7 +8,8 @@
       <img src="<%=listing.image.url%>" alt="..." class="card-img-top" />
       <div class="card-body">
         <h3><%=listing.title%></h3>
-        <p class="car-text"><%=listing.description%></p>
+        <p class="card-text">Owned by <i><%=listing.owner.username%></i></p>
+        <p class="card-text"><%=listing.description%></p>
         <div class="">
           <span><%=listing.location%></span>,
           <span><%=listing.country%></span>
