--- a/views/listings/listing.ejs
+++ b/views/listings/listing.ejs
@@ -18,6 +18,7 @@
       </div>
     </div>
   </div>
+  <% if (currUser && currUser._id.equals(listing.owner._id)){%>
   <div class="options">
     <a
       href="http://localhost:3000/listings/<%=listing._id%>/edit"
@@ -28,8 +29,9 @@
       <button class="btn offset-5">delete</button>
     </form>
   </div>
-
+  <%}%>
   <div class="col-8 offset-3">
+    <%if (currUser){%>
     <hr />
     <h4>Your Review is valuable for us</h4>
     <form
@@ -66,6 +68,7 @@
 
       <button class="btn btn-dark">Publish</button>
     </form>
+    <%}%>
     <hr />
     <h4>All reviews</h4>
     <div class="row">
