--- a/views/listings/listing.ejs
+++ b/views/listings/listing.ejs
@@ -42,16 +42,52 @@
     >
       <div class="form-group">
         <label for="rating">Rating</label>
-        <input
-          required
-          type="range"
-          min="1"
-          max="5"
-          name="review[rating]"
-          id="rating"
-          class="form-range"
-        />
-        <div class="small">Adjust this Slider for 1-5</div>
+        <fieldset class="starability-coinFlip">
+          <input
+            type="radio"
+            id="no-rate"
+            class="input-no-rate"
+            name="rating"
+            value="1"
+            checked
+            aria-label="No rating."
+          />
+          <input
+            type="radio"
+            id="first-rate1"
+            name="review[rating]"
+            value="1"
+          />
+          <label for="first-rate1" title="Terrible">1 star</label>
+          <input
+            type="radio"
+            id="first-rate2"
+            name="review[rating]"
+            value="2"
+          />
+          <label for="first-rate2" title="Not good">2 stars</label>
+          <input
+            type="radio"
+            id="first-rate3"
+            name="review[rating]"
+            value="3"
+          />
+          <label for="first-rate3" title="Average">3 stars</label>
+          <input
+            type="radio"
+            id="first-rate4"
+            name="review[rating]"
+            value="4"
+          />
+          <label for="first-rate4" title="Very good">4 stars</label>
+          <input
+            type="radio"
+            id="first-rate5"
+            name="review[rating]"
+            value="5"
+          />
+          <label for="first-rate5" title="Amazing">5 stars</label>
+        </fieldset>
       </div>
       <div class="form-group">
         <label for="comment" class="form-label">Comment</label>
@@ -75,10 +111,16 @@
       <% for(review of listing.reviews){%>
       <div class="card col-5 ms-2 mb-2">
         <div class="card-body">
-          <h5 class="card-title"><%=review.author? review.author.username : "Mr. bean"%></h5>
+          <h5 class="card-title">
+            <%=review.author? review.author.username : "Mr. bean"%>
+          </h5>
+          <div
+            class="card-text starability-result"
+            data-rating="<%=review.rating%>"
+          ></div>
           <div class="card-text"><%=review.comment%></div>
-          <div class="card-text"><%=review.rating%></div>
-          <% if (currUser && review.author && currUser._id.equals(review.author._id)){%>
+          <% if (currUser && review.author &&
+          currUser._id.equals(review.author._id)){%>
           <form
             action="/listing/<%=listing._id%>/review/<%=review._id%>?_method=delete"
             method="post"
