--- a/public/css/ratings.css
+++ b/public/css/ratings.css
@@ -130,7 +130,7 @@
   display: block;
   position: relative;
   width: 150px;
-  min-height: 60px;
+  /* min-height: 60px; */
   padding: 0;
   border: none;
   will-change: contents;
