--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,8 @@ body {
   }
 }
 
-#newListingForm, #signupForm {
+#newListingForm,
+#signupForm {
   display: flex;
   flex-direction: column;
   width: 80%;
@@ -107,7 +108,7 @@ body {
 /* Listing(show) */
 .listing {
   & .card-img-top {
-    height: 40vh;
+    height: 60vh;
     width: 100%;
     object-fit: cover;
   }
@@ -119,6 +120,50 @@ body {
     background-color: #fe424d !important;
     border: none !important;
   }
+
+  & .section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding: 1rem 0;
+
+    & .about {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      flex: 1;
+      min-width: min(450px, 100%);
+    }
+
+    & .reviewCollectConter {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      min-width: min(350px, 100%);
+
+      & form {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+      }
+    }
+  }
+}
+.showReviewContainer .review-cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+  gap: 1rem;
+
+  & .card{
+    width: 100%;
+  }
+}
+
+.showReviewContainer .review-cards .card .card-body{
+  display: flex;
+  gap: .5rem;
+  flex-direction: column;
 }
 
 /* Footer */
