--- a/views/listings/listing.ejs
+++ b/views/listings/listing.ejs
@@ -1,113 +1,120 @@
 <% layout("/layouts/boilerplate")%>
 <div class="listing">
   <div class="row">
-    <div class="col-8 offset-3">
-      <h3>Listing</h3>
-    </div>
-    <div class="card col-6 offset-3">
+    <h3><%=listing.title%></h3>
+    <div class="card">
       <img src="<%=listing.image.url%>" alt="..." class="card-img-top" />
       <div class="card-body">
-        <h3><%=listing.title%></h3>
         <p class="card-text">Owned by <i><%=listing.owner.username%></i></p>
-        <p class="card-text"><%=listing.description%></p>
-        <div class="">
-          <span><%=listing.location%></span>,
-          <span><%=listing.country%></span>
+      </div>
+      <div class="section">
+        <div class="about">
+          <span class=""><%=listing.description%></span>
+          <div class="">
+            <span><%=listing.location%></span>,
+            <span><%=listing.country%></span>
+          </div>
+          <span>&#8377; <%= listing.price.toLocaleString("en-IN") %></span>
+          <% if (currUser && currUser._id.equals(listing.owner._id)){%>
+          <div class="options">
+            <a
+              href="<%=BASE_URL%>/listings/<%=listing._id%>/edit"
+              class="btn btn-dark"
+              >Edit</a
+            >
+            <form
+              method="post"
+              action="/listings/<%=listing._id%>?_method=DELETE"
+            >
+              <button class="btn">delete</button>
+            </form>
+          </div>
+          <%}%>
         </div>
-        <p>&#8377; <%= listing.price.toLocaleString("en-IN") %></p>
+        <div class="reviewCollectConter">
+          <%if (currUser){%>
+          <h4>Your Review is valuable for us</h4>
+          <form
+            action="/listing/<%=listing.id%>/review"
+            method="post"
+            class="needs-validation"
+            novalidate
+          >
+            <div class="">
+              <label for="rating">Rating</label>
+              <fieldset class="starability-coinFlip">
+                <input
+                  type="radio"
+                  id="no-rate"
+                  class="input-no-rate"
+                  name="rating"
+                  value="1"
+                  checked
+                  aria-label="No rating."
+                />
+                <input
+                  type="radio"
+                  id="first-rate1"
+                  name="review[rating]"
+                  value="1"
+                />
+                <label for="first-rate1" title="Terrible">1 star</label>
+                <input
+                  type="radio"
+                  id="first-rate2"
+                  name="review[rating]"
+                  value="2"
+                />
+                <label for="first-rate2" title="Not good">2 stars</label>
+                <input
+                  type="radio"
+                  id="first-rate3"
+                  name="review[rating]"
+                  value="3"
+                />
+                <label for="first-rate3" title="Average">3 stars</label>
+                <input
+                  type="radio"
+                  id="first-rate4"
+                  name="review[rating]"
+                  value="4"
+                />
+                <label for="first-rate4" title="Very good">4 stars</label>
+                <input
+                  type="radio"
+                  id="first-rate5"
+                  name="review[rating]"
+                  value="5"
+                />
+                <label for="first-rate5" title="Amazing">5 stars</label>
+              </fieldset>
+            </div>
+            <div class="form-group">
+              <label for="comment" class="form-label">Comment</label>
+              <textarea
+                rows="5"
+                name="review[comment]"
+                id="comment"
+                class="form-control"
+                placeholder="Describe what you liked about this place"
+                required
+              ></textarea>
+              <div class="invalid-feedback">
+                Please describe what your feelings
+              </div>
+            </div>
+
+            <button class="btn btn-dark">Publish</button>
+          </form>
+          <%}%>
+        </div>
       </div>
     </div>
   </div>
-  <% if (currUser && currUser._id.equals(listing.owner._id)){%>
-  <div class="options">
-    <a
-      href="<%=BASE_URL%>/listings/<%=listing._id%>/edit"
-      class="btn btn-dark col-2 offset-3"
-      >Edit</a
-    >
-    <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
-      <button class="btn offset-5">delete</button>
-    </form>
-  </div>
-  <%}%>
-  <div class="col-8 offset-3">
-    <%if (currUser){%>
-    <hr />
-    <h4>Your Review is valuable for us</h4>
-    <form
-      action="/listing/<%=listing.id%>/review"
-      method="post"
-      class="needs-validation"
-      novalidate
-    >
-      <div class="form-group">
-        <label for="rating">Rating</label>
-        <fieldset class="starability-coinFlip">
-          <input
-            type="radio"
-            id="no-rate"
-            class="input-no-rate"
-            name="rating"
-            value="1"
-            checked
-            aria-label="No rating."
-          />
-          <input
-            type="radio"
-            id="first-rate1"
-            name="review[rating]"
-            value="1"
-          />
-          <label for="first-rate1" title="Terrible">1 star</label>
-          <input
-            type="radio"
-            id="first-rate2"
-            name="review[rating]"
-            value="2"
-          />
-          <label for="first-rate2" title="Not good">2 stars</label>
-          <input
-            type="radio"
-            id="first-rate3"
-            name="review[rating]"
-            value="3"
-          />
-          <label for="first-rate3" title="Average">3 stars</label>
-          <input
-            type="radio"
-            id="first-rate4"
-            name="review[rating]"
-            value="4"
-          />
-          <label for="first-rate4" title="Very good">4 stars</label>
-          <input
-            type="radio"
-            id="first-rate5"
-            name="review[rating]"
-            value="5"
-          />
-          <label for="first-rate5" title="Amazing">5 stars</label>
-        </fieldset>
-      </div>
-      <div class="form-group">
-        <label for="comment" class="form-label">Comment</label>
-        <textarea
-          rows="5"
-          name="review[comment]"
-          id="comment"
-          class="form-control"
-          placeholder="Describe what you liked about this place"
-          required
-        ></textarea>
-        <div class="invalid-feedback">Please describe what your feelings</div>
-      </div>
 
-      <button class="btn btn-dark">Publish</button>
-    </form>
-    <%}%>
-    <hr />
+  <div class="showReviewContainer">
     <h4>All reviews</h4>
-    <div class="row">
+    <div class="review-cards">
       <% for(review of listing.reviews){%>
       <div class="card col-5 ms-2 mb-2">
         <div class="card-body">
@@ -124,8 +131,9 @@
           <form
             action="/listing/<%=listing._id%>/review/<%=review._id%>?_method=delete"
             method="post"
+            class="review-form"
           >
-            <button class="btn">Remove Review</button>
+            <button class="btn btn-outline-secondary">Remove Review</button>
           </form>
           <%}%>
         </div>
