--- a/views/listings/listings.ejs
+++ b/views/listings/listings.ejs
@@ -2,15 +2,24 @@
 <style>
   #filters {
     display: flex;
-    gap: 1.5rem;
+    gap: .5rem;
     max-width: 100%;
-    overflow-x: auto;
+    overflow-x: scroll;
+    flex-wrap: nowrap;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    &::-webkit-scrollbar{
+      display: none;
+    }
 
     flex-wrap: nowrap;
 
     & .filter {
       text-align: center;
       opacity: 0.7;
+      padding: 0 .5rem;
+      border-bottom: 2px solid transparent;
       & div {
         font-size: 1.5em;
       }
@@ -20,6 +29,7 @@
       &:hover {
         opacity: 1;
         cursor: pointer;
+        border-bottom-color: grey;
       }
     }
   }
@@ -32,47 +42,47 @@
     </div>
 
     <div class="filter">
-      <div class=""><i class="fa-solid fa-fire-flame-curved"></i></div>
-      <p class="">Trending</p>
+      <div class=""><i class="fa-solid fa-person-swimming"></i></div>
+      <p class="">Pool</p>
     </div>
 
     <div class="filter">
-      <div class=""><i class="fa-solid fa-fire-flame-curved"></i></div>
-      <p class="">Trending</p>
+      <div class=""><i class="fa-solid fa-wheat-awn"></i></div>
+      <p class="">Farm</p>
     </div>
 
     <div class="filter">
-      <div class=""><i class="fa-solid fa-fire-flame-curved"></i></div>
-      <p>Trending</p>
+      <div class=""><i class="fa-solid fa-mountain-sun"></i></div>
+      <p>Amazing View</p>
     </div>
 
     <div class="filter">
-      <div class=""><i class="fa-solid fa-fire-flame-curved"></i></div>
-      <p>Trending</p>
+      <div class=""><i class="fa-solid fa-tree"></i></div>
+      <p>Garden</p>
     </div>
     <div class="filter">
-      <div class=""><i class="fa-solid fa-fire-flame-curved"></i></div>
-      <p>Trending</p>
+      <div class=""><i class="fa-solid fa-umbrella-beach"></i></div>
+      <p>Beach</p>
     </div>
     <div class="filter">
-      <div class=""><i class="fa-solid fa-fire-flame-curved"></i></div>
-      <p>Trending</p>
+      <div class=""><i class="fa-solid fa-mountain"></i></div>
+      <p>Mountain</p>
     </div>
     <div class="filter">
-      <div class=""><i class="fa-solid fa-fire-flame-curved"></i></div>
-      <p>Trending</p>
+      <div class=""><i class="fa-solid fa-bowl-rice"></i></div>
+      <p>Brilliant Food</p>
     </div>
     <div class="filter">
-      <div class=""><i class="fa-solid fa-fire-flame-curved"></i></div>
-      <p>Trending</p>
+      <div class=""><i class="fa-solid fa-tower-observation"></i></div>
+      <p>Tower</p>
     </div>
     <div class="filter">
-      <div class=""><i class="fa-solid fa-fire-flame-curved"></i></div>
-      <p>Trending</p>
+      <div class=""><i class="fa-solid fa-cloud-showers-water"></i></div>
+      <p>Monsoon Vibe</p>
     </div>
     <div class="filter">
-      <div class=""><i class="fa-solid fa-fire-flame-curved"></i></div>
-      <p>Trending</p>
+      <div class=""><i class="fa-solid fa-van-shuttle"></i></div>
+      <p>Mobile House</p>
     </div>
   </div>
   <div class="listings-grid">
